todo_app/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todoapp
  name: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  strategy: {}
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: todo-app-volume
          persistentVolumeClaim:
            claimName: share-claim
      containers:
        - image: todo_app/frontend:1.12
          imagePullPolicy: IfNotPresent
          name: todo-app-frontend
          resources: {}
        - image: todo_app/backend:1.12
          imagePullPolicy: IfNotPresent
          name: todo-app-backend
          resources: {}
status: {}
