todo_app/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
spec:
  type: NodePort
  selector:
    app: todoapp
  ports:
    - name: http
      port: 1234
      targetPort: 3000
